# chess-tune

./: .gitignore  .pre-commit-config.yaml  README.md  main.py  pyproject.toml
.github/workflows/: analysis.yml
chesstune/: callbacks.py  config.py  evaluation.py  inference_ops.py  sft_ops.py  sft_tasks.py  tokenizer_ops.py  train_config.py  utils.py
chesstune/scripts/: create_tokenizer.py  dataset_stats.py  download_database.py  inference.py  prepare_dataset.py  train_sft.py
configs/: sample_config_with_eval.json
configs/debug/: sample_config.json  stable_config.json
docs/: data_preparation.md
